tests/paczka1/fuzzy1/36157462.err
Error in line 7: PLi9IXRBz S226 37,6
Error in line 8: suq S226 0,7
Error in line 9: PLi9IXRBz S765 83,6
Error in line 19: suq S226 42,4
Error in line 27: S765 A818 27,2
Error in line 29: S765 S226 22,4
Error in line 32: hKT S226 72,1
Error in line 20: suq S765 58,5
